# GameEngineWCMake

./: .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake
include/: Core.h  EditorUI.h  Entity.h  EntityManager.h  InputManager.h  Physics.h  ProjectManager.h  Renderer.h  ResourceManager.h  WindowManager.h  WindowRenderer.h
src/: EditorUI.cpp  Entity.cpp  EntityManager.cpp  InputManager.cpp  Physics.cpp  ProjectManager.cpp  Renderer.cpp  ResourceManager.cpp  TestGame.cpp  WindowManager.cpp  WindowRenderer.cpp  main.cpp
